// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativeSelectPlaceholder renders 1`] = `
<div>
  <div
    class="flex-1 box-border [:where(&)_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <option
      value=""
    >
      Select an option
    </option>
  </div>
</div>
`;

exports[`NativeSelectPlaceholder renders disabled 1`] = `
<div>
  <div
    class="flex-1 box-border [:where(&)_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <option
      disabled=""
      value=""
    >
      Select an option
    </option>
  </div>
</div>
`;

exports[`NativeSelectPlaceholder renders with emptySelectValue 1`] = `
<div>
  <div
    class="flex-1 box-border [:where(&)_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <option
      value="foo"
    >
      Select an option
    </option>
  </div>
</div>
`;
